# webshare-rs

./: Cargo.toml  Justfile  README.md  cliff.toml  context7.json
.github/workflows/: release.yml
docs/: apikeys.md  billing.md  idverification.md  index.md  ipauthorization.md  notifications.md  proxy-config.md  proxy-list.md  proxy-replacement.md  proxystats.md  referral.md  registerandlogin.md  subscription.md  subuser.md  twofactorauth.md  userprofile.md  verification.md
docs/apikeys/: create.md  delete.md  list.md  retrieve.md  update.md
docs/billing/: billing.md  payment_methods.md  pending_payments.md  transactions.md  update_payment_method.md
docs/downloads/: get_download_token.md  reset_download_token.md
docs/idverification/: complete.md  retrieve.md  start.md
docs/ipauthorization/: create.md  delete.md  list.md  retrieve.md  whatsmyip.md
docs/notifications/: dismiss.md  list.md  restore.md  retrieve.md
docs/proxy-config/: allocate_unallocated_countries.md  get_proxy_config.md  get_proxy_stats.md  get_proxy_status.md  update.md
docs/proxy-list/: download.md  list.md  ondemand_refresh.md
docs/proxy-replacement/: proxy_replacement.md  replaced_proxy.md
docs/proxystats/: activity_object.md  aggregate.md  download_activity.md  list_activity.md  list_stats.md
docs/referral/: referral_credit.md  referral_earnout.md  referral_info.md
docs/registerandlogin/: activate-account.md  change-email.md  change-password.md  delete-account.md  delete-social-account.md  (+4 more)
src/: client.rs  error.rs  lib.rs  pagination.rs  rest.rs
tests/: integration.rs
(+86 files in other folders)
