[package]
name = "webshare-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for the Webshare proxy API — ergonomic typed client covering all 100+ endpoints"
repository = "https://github.com/akjong/webshare-rs"
homepage = "https://github.com/akjong/webshare-rs"
documentation = "https://docs.rs/webshare-rs"
license = "MIT"
readme = "README.md"
keywords = ["webshare", "proxy", "api", "sdk", "http"]
categories = ["api-bindings", "network-programming", "web-programming::http-client"]

[dependencies]
hpx = { version = "2.2.0", features = ["json", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
